--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,15 +1,20 @@
-FROM --platform=linux/amd64 node:14-alpine
-## Create app directory
-WORKDIR /usr/src/app
-## Install app dependencies
-## A wildcard is used to ensure both package.json AND package-lock.json are copied where available (npm@5+)
+# Use an official Node.js runtime as the base image
+FROM node:16
+
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
+
+# Install project dependencies
 RUN npm install
-## Bundle app source
+
+# Copy the entire project to the working directory
 COPY . .
-# Build the React application for production
-RUN npm run build
-# Expose the port the application will run on
+
+# Expose a port for the application (adjust as needed)
 EXPOSE 3000
-# Define the command to start the application
+
+# Define the command to run your application
 CMD ["npm", "start"]
